30-sg-rules/main.tf
resource "aws_security_group_rule" "backend_alb_bastion" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = local.security_group_id
  source_security_group_id = local.bastion_sg_id
}

resource "aws_security_group_rule" "bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.bastion_sg_id
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_role" "mongodb_bastion"{
  type = "ingress"
  from_port = 22 
  to_port = 22 
  protocal = "tcp"
  security_group_id = local.mongodb_sg_id
  source_security_group_id = local.bastion_sg_id

}

resource "aws_security_group_role" "redis_bastion"{
  type = "ingress"
  from_port = 22 
  to_port = 22 
  protocal = "tcp"
  security_group_id = local.redis_sg_id
  source_security_group_id = local.bastion_sg_id

}


resource "aws_security_group_role" "mysql_bastion"{
  type = "ingress"
  from_port = 22 
  to_port = 22 
  protocal = "tcp"
  security_group_id = local.mysql_sg_id
  source_security_group_id = local.bastion_sg_id

}

resource "aws_security_group_role" "rabbitmq_bastion"{
  type = "ingress"
  from_port = 22 
  to_port = 22 
  protocal = "tcp"
  security_group_id = local.rabbitmq_sg_id
  source_security_group_id = local.bastion_sg_id

}

resource "aws_security_group_role" "catalogue_bastion"{
  type = "ingress"
  from_port = 22 
  to_port = 22 
  protocal = "tcp"
  security_group_id = local.catalogue_sg_id
  source_security_group_id = local.bastion_sg_id

}

resource "aws_security_group_role" "mongodb_catalogue"{
  type = "ingress"
  from_port = 27017 
  to_port = 27017
  protocal = "tcp"
  security_group_id = local.catalogue_sg_id
  source_security_group_id = local.mongodb_sg_id

}

resource "aws_security_group_role" "catalogue_backend_alb"{
  type = "ingress"
  from_port = 8080
  to_port = 8080
  protocal = "tcp"
  security_group_id = local.catalogue_sg_id
  source_security_group_id = local.backend_alb_sg_id

}
